--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        renderscriptTargetApi 33
+        renderscriptSupportModeEnabled true
     }
 
     buildTypes {
@@ -29,7 +32,7 @@ android {
 }
 
 dependencies {
-
+    implementation "com.github.skydoves:colorpickerpreference:2.0.6"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
